Fixed spacing between session header and text

--- a/app/assets/stylesheets/components/session_form.scss
+++ b/app/assets/stylesheets/components/session_form.scss
@@ -107,10 +107,10 @@
 
 .form-header-text > h1 {
   font-weight: 600;
+  height: 44px;
   color: black;
   font-size: 32px;
   margin-top: 5px;
-  margin-bottom: 5px;
 }
 
 .form-header-text > p {
